# freyja

./: .env.example  .gitignore  README.md  freyja-holographic-label-system.html  launch.sh  package-lock.json  package.json  pyproject.toml  tailwind.config.cjs  topo-mock-v2.html  topo-mock.html  tsconfig.json  tsconfig.node.json  vision-board-cosmos.html  vision-board-reimagined.html  vision-board-v2.html  vision-board.html  vite.config.ts
.claude/: launch.json
assets/: icon.icns
bridge/: artifact_store.py  briefing.py  compaction_telemetry.py  file_changes.py  freyja_bridge.py  inbox.py  kanban_journal.py  process_env.py  project_paths.py  session_ledger.py  task_journal.py  transcript_persistence.py  wm_backfill.py  working_memory.py
bridge/gateway/: approval.py  capabilities.py  cli.py  config.py  control_channel.py  permission_listener.py  pid.py  run.py  session_router.py  stream_consumer.py
bridge/knowledge/: __init__.py  memory_store.py  models.py  prompt.py  skill_store.py
bridge/runtimes/: __init__.py  acp_adapter.py  acp_client.py  claude_code_adapter.py  claude_code_client.py  codex_adapter.py  codex_client.py  freyja_mcp_server.py  harness_tool_socket.py  registry.py
bridge/scheduler/: __init__.py  daemon.py  memory.py  models.py  persistence.py  runtime.py  scheduling.py  service.py
bridge/tools/: __init__.py  agent_types.py  artifacts_tool.py  base.py  bash_tool.py  browser_tools.py  computer_tools.py  computer_use_tool.py  coordination.py  file_tools.py  gateway_tools.py  goal_loop.py  image_generation_tool.py  image_store.py  kanban_board.py  memory_tools.py  message_bus.py  provider_computer_tool.py  quiver_tools.py  recall_tool.py  registry.py  schedule_tool.py  search_tools.py  session_memory_tool.py  skill_tools.py  sub_agent_registry.py  sub_agent_tool.py  subagents_tool.py  summarize_context_tool.py  (+8 more)
docs/: ADDING-A-MODEL.md  ALWAYS-ON-PLATFORM.md  ARCHITECTURE.md  BRIDGE-PRODUCTION-ROADMAP.md  COMPACTION-DECISION-DRAFT.md  COMPACTION-FLOW.md  DESIGN-REVIEW.md  EVAL-HARNESS-DESIGN.md  GOAL-TASK-COORDINATION-PLAN.md  GROUNDED-MEMORY-DESIGN.md  KANBAN-DESIGN.md  PERFORMANCE-DEEP-DIVE.md  PROJECT-DEEP-DIVE.md  SKILL-LEARNING-DESIGN.md  SKILLS-MEMORY-DESIGN.md  SLACK-GATEWAY.md  TRAJECTORY-TRAINING.md  WARP-FILE-EDIT-UX-RESEARCH.md  _section-composition.html  _section-economics.html  _section-failure-security.html  _section-lifecycle.html  architecture-blog-backup.html  architecture-blog.html  context-management-landscape.html  freyja_scheduled_loops_skills_report.md  runtime-orchestration-substrate.html  skill-evolution-landscape.html
engine/: __init__.py  anthropic_provider.py  cerebras_provider.py  compaction.py  constants.py  errors.py  fireworks_provider.py  google_provider.py  openai_provider.py  permissions.py  provider_native.py  providers.py  redact.py  runner.py  session.py  tokenizer.py  tools.py  types.py  usage.py
mockups/: index.html  tasks-dashboard.html  v2-reading-room.html  v3-timeline.html  v4-constellation.html  v5-narrative.html  v6-spotlight.html  v7-briefing.html  v8-keyboard.html
native/freyja_native/: Cargo.toml  pyproject.toml
native/freyja_native/python/freyja_native/: __init__.py
native/freyja_native/src/: ax.rs  capture.rs  input.rs  lib.rs  windows.rs
scripts/: build-main.mjs  bundle-python.sh  convert-to-atif.py  convert-to-sharegpt.py  create-dmg.mjs  dev.mjs  rebuild.sh  setup-signing-cert.sh  sign-resources.js  verify_fable5.py
tests/: scheduler_multiproc_test.py  test_artifact_store.py  test_briefing.py  test_compaction_ground_truth.py  test_compaction_provider_isolation.py  test_ensure_session_inflight_guard.py  test_gemini_thinking_floor.py  test_image_attachments.py  test_image_generation_tool.py  test_image_media_type_guard.py  test_kanban_coordination.py  test_kanban_dispatcher.py  test_kanban_journal.py  test_ledger_reminder_producer.py  test_midstream_provider_error.py  test_openai_computer_call_replay.py  test_provider_computer_tool.py  test_quiver_tools.py  test_recall_tool.py  test_runner_failure_surface.py  test_session_ledger.py  test_session_memory_trigger.py  test_skill_learning.py  test_slack_adapter_size_limits.py  test_slack_thread_pagination.py  test_stream_consumer_orphans.py  test_structured_output_tool_choice.py  test_subagent_continuation.py  test_transcript_coordination_metadata.py  test_transient_connection_retry.py  test_usage_accumulator.py  test_video_analysis_tool.py  test_wm_backfill.py  test_working_memory.py
(+191 files in other folders)
