[project]
name = "freyja"
version = "0.1.0"
description = "Agentic AI desktop app — the engine + bridge that powers the Electron UI"
requires-python = ">=3.11"
readme = "README.md"
license = "MIT"

dependencies = [
    # LLM provider SDKs
    # anthropic >=0.87: APIStatusError.type (read by the mid-stream SSE
    # error dispatch in engine/anthropic_provider._convert_api_error).
    "anthropic>=0.87",
    "openai>=1.30",
    "google-genai>=2.0",
    "httpx>=0.25",
    # Tokenizer for context-window estimation
    "tiktoken>=0.12.0",
    # Config parsing
    "pydantic>=2.0",
    "pyyaml>=6.0",
    # Web search tool
    "parallel-web>=0.4.1",
    # Image manipulation for cursor overlay on screenshots
    "pillow>=10.0",
    # The Rust pyo3 extension (freyja_native) is built via maturin
    "maturin>=1.5",
    "websockets>=16.0",
    # Slack platform adapter (Socket Mode + Bolt event handlers).
    "slack-bolt>=1.18",
    "slack-sdk>=3.27",
    # aiohttp for downloading Slack file attachments (carries auth header).
    "aiohttp>=3.9",
]

[project.scripts]
# `freyja` CLI: gateway daemon control + setup wizards. Implemented in
# bridge/gateway/cli.py. Installed automatically by `uv pip install -e .`
# or any wheel install.
freyja = "bridge.gateway.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["engine", "bridge"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
