[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "freyja-native"
version = "0.1.0"
description = "Native macOS bindings for Freyja computer-use tools"
requires-python = ">=3.11"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "freyja_native._native"
python-source = "python"
